# LeafGuard_2

./: MANIFEST.in  README.md  output.txt  pyproject.toml  setup.py
leafguard_capstone/: __init__.py  dataset_description_initial_dataset_view.py  main.py  pyproject.toml  requirements.txt  setup.py
leafguard_capstone/config/: core.py
leafguard_capstone/data_processing/: __init__.py  generators.py
leafguard_capstone/gradio_ui/: app.py  gradio_app.py
leafguard_capstone/mlruns/0/: meta.yaml
leafguard_capstone/mlruns/776429222976738588/: meta.yaml
leafguard_capstone/mlruns/776429222976738588/975987233f64421496a284c73148ffb5/: meta.yaml
leafguard_capstone/mlruns/924837113106774401/: meta.yaml
leafguard_capstone/mlruns/924837113106774401/aa81edeaad8c4b7ab96f8a2f51961354/: meta.yaml
leafguard_capstone/mlruns/924837113106774401/aa81edeaad8c4b7ab96f8a2f51961354/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
leafguard_capstone/mlruns/mlruns/0/: meta.yaml
leafguard_capstone/mlruns/mlruns/270143199323346492/efaa0af16a4a41218443fcde156fbabc/: meta.yaml
leafguard_capstone/mlruns/mlruns/270143199323346492/efaa0af16a4a41218443fcde156fbabc/metrics/: averaging_accuracy  averaging_f1  averaging_precision  averaging_recall  voting_accuracy  voting_f1  (+2 more)
leafguard_capstone/model_training/: ensembles.py  training.py
leafguard_capstone/plantdisease_classification_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
leafguard_capstone/prediction_service/: inference.py  predictions.py
leafguard_capstone/tests/: test_flask_app.py
(+57 files in other folders)
