[tool.poetry]
name = "leafguard-capstone"
version = "0.4.0"
description = "A package for plant disease detection and analysis"
authors = ["Your Name <your_email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
